--- a/projetpiscinetest.cbp
+++ b/projetpiscinetest.cbp
@@ -25,6 +25,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="alleg44.dll" />
 				</Linker>
 			</Target>
 		</Build>
