connexite + test vulnera

--- a/projetpiscinetest.cbp
+++ b/projetpiscinetest.cbp
@@ -39,6 +39,7 @@
 		<Unit filename="header.h" />
 		<Unit filename="indice.cpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="vulnerabilite.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
